Fixed white space bug and testimonial img

--- a/reevona-website/src/index.css
+++ b/reevona-website/src/index.css
@@ -78,6 +78,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* outline: 1px solid red; */
 }
 
 html {
@@ -182,21 +183,25 @@ input {
 
 .container {
   max-width: 1024px;
+  margin: 0 auto;
   margin-left: var(--mb-1-5);
-  margin-right: var(--mb-1-5);
+  margin-right: var(--mb-1-5); 
 }
 
 .header {
   width: 100%;
   position: fixed;
   top: 0;
-  /* left: 0; */
+  left: 0;
+  right: 0;
   z-index: var(--z-fixed);
   background-color: var(--first-color);
   background-color: transparent;
   left: 1.5rem;
   right: 1.5rem;
   width: auto;
+  overflow: hidden;
+  max-width: 100vw;
 }
 
 .nav {
@@ -207,7 +212,6 @@ input {
   padding: 1em;
   background-color: rgb(8, 8, 8);
   z-index: 10;
-
 }
 
 .nav_logo,
@@ -495,17 +499,19 @@ input {
   color: white;
 }
 
-.client-img {
+/* .client-img {
   width: 90px;
   height: 90px;
   border-radius: 50%;
   object-fit: cover;
-}
+} */
 
 .testimonial-content h3 {
-  margin: 0;
-  font-size: 1.5rem;
+  margin-bottom: 10px; 
+  /* margin: 0; */
+  font-size: 1.5rem; 
 }
+
 
 .stars {
   color: #E9CC44;
@@ -530,7 +536,6 @@ input {
   bottom: -100%;
   right: 7%;
   z-index: 4;
-  width: 40%;
   background-color: #E9CC44;
   color: white;
   width: 35%;
@@ -647,10 +652,9 @@ input {
     bottom: -110%;
     right: 7%;
     z-index: 4;
-    width: 40%;
     background-color: #E9CC44;
     color: white;
-    width: 35%;
+    width: 40%;
   }
 
   .main-card {
@@ -910,6 +914,19 @@ input {
   left: 0;
   width: 100%;
   height: auto;
+}
+
+@keyframes waveMove{
+  0% {transform: translateY(0);}
+  50% {transform: translateY(20px);}
+  100% {transform: translateY(0);}
+} 
+
+.wave-top path {
+  animation: waveMove 0.8s infinite ease-in-out;
+}
+.wave-bottom path {
+  animation: waveMove 0.8s infinite ease-in-out;
 }
 
 .wave-top {
